FORT-548 - Fixing css issue with long words not wrapping in JDM text editors

--- a/apps/job-description-management/styles.scss
+++ b/apps/job-description-management/styles.scss
@@ -229,3 +229,7 @@ pf-workflow-config {
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
 }
+
+.ql-editor, .ql-editor-output {
+  word-break: break-word;
+}
